All the links are correct now. My profile pic has been added and fixed the projects sections that was off on smaller devices

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -38,14 +38,27 @@
     margin: 0 5%;
   }
   .section__pic-container {
-    width: 275px;
+    width: fit-content;
     height: 275px;
     margin: 0 auto 2rem;
   }
   .about-containers {
     margin-top: 0;
   }
+  .small-text {
+   flex-wrap: nowrap;
+   display: flex;
+   flex-direction: column;
+   }
+  .small-text p{
+    font-size: medium;
+   }
+  .small-text h2{
+   font-size: large;
+  }
 }
+
+
 
 @media screen and (max-width: 600px) {
   #contact,
